# AspectBasedSentimentAnalysis

./: .gitignore  Aspect_Based_Sentiment_Analysis.ipynb  LICENSE  README.md  pyproject.toml
configs/: config.yaml
notebooks/: Aspect_Based_Sentiment_Analysis.ipynb
scripts/: validate_package.py
src/absa/: __init__.py  pipeline.py
src/absa/data/: __init__.py  loader.py
src/absa/eval/: __init__.py  metrics.py
src/absa/labeling/: __init__.py  keyword_labeler.py
src/absa/models/: __init__.py  embeddings.py  neural_networks.py  trainer.py
tests/: __init__.py  conftest.py  test_data.py
