[project]
name = "aspectbasedsentimentanalysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-groq>=1.1.2",
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
